<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.example.storemanager.AddData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_enter_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/null_image"
            android:visibility="visible" />

        <View
            android:id="@+id/view_below_image_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/fab_margin"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edit_text_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:hint="@string/string_item_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_text_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:hint="@string/string_item_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_text_item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:hint="@string/string_item_quantity"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/string_idDiscountAvailable"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/radio_group_discount_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_discount_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setDiscountAvailable"
                    android:text="@string/string_yes" />

                <RadioButton
                    android:id="@+id/radio_button_discount_unavailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:onClick="setDiscountUnavailable"
                    android:text="@string/string_no" />
            </RadioGroup>
        </LinearLayout>


        <EditText
            android:id="@+id/edit_text_discount_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:hint="@string/string_discount_precentage"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_text_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:hint="@string/string_supplier_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_text_item_supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/string_supplier_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@android:color/holo_blue_light"
            android:onClick="performImageAddingOperation"
            android:text="@string/string_add_image"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
