<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="132dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/example_tex1t"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_item_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/examople_text2" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/examople_text2" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_item_price"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/rectangular_border_background"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/example_text3"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:background="@android:color/holo_orange_light"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/string_sell"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>