<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.example.storemanager.ShowData">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fab_margin"
            android:background="@android:drawable/dialog_holo_light_frame">

            <ImageView
                android:id="@+id/prodcut_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/example_product_image" />


            <TextView
                android:id="@+id/item_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prodcut_image"
                android:layout_gravity="center"
                android:background="@drawable/rectangular_border_background"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/string_item_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_name_text_view"
                android:layout_marginBottom="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_weight="2"
                        android:text="@string/string_item_quantity"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_item_quantity_show"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_weight="1"
                        android:text="@string/string_item_quantity"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_weight="2"
                        android:text="@string/string_item_price"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_item_price_show"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_weight="1"
                        android:text="@string/string_item_price"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_weight="2"
                        android:text="@string/string_idDiscountAvailable"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_view_is_discount_available_show"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_weight="1"
                        android:text="@string/string_idDiscountAvailable"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:onClick="performDeleteOperation"
                    android:text="@string/string_delete_product"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:onClick="sendOrderIntent"
                    android:text="@string/string_order_product"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
